--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^10.0.0",
     "@angular/platform-browser-dynamic": "^10.0.0",
     "@angular/router": "^10.0.0",
+    "@candidosales/material-time-picker": "^2.4.0",
     "angular-in-memory-web-api": "~0.11.0",
     "moment": "^2.26.0",
     "rxjs": "^6.5.5",
