--- a/package.json
+++ b/package.json
@@ -11,24 +11,26 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.0.0",
-    "@angular/cdk": "^10.0.0",
-    "@angular/common": "^10.0.0",
-    "@angular/compiler": "^10.0.0",
-    "@angular/core": "^10.0.0",
-    "@angular/flex-layout": "^10.0.0-beta.32",
-    "@angular/forms": "^10.0.0",
-    "@angular/material": "^10.0.0",
-    "@angular/material-moment-adapter": "^10.0.0",
-    "@angular/platform-browser": "^10.0.0",
-    "@angular/platform-browser-dynamic": "^10.0.0",
-    "@angular/router": "^10.0.0",
-    "@candidosales/material-time-picker": "^2.4.0",
-    "angular-in-memory-web-api": "~0.11.0",
-    "moment": "^2.26.0",
-    "rxjs": "^6.5.5",
-    "tslib": "^1.11.2",
-    "zone.js": "~0.10.3"
+    "@angular/animations": "10.2.5",
+    "@angular/cdk": "10.2.7",
+    "@angular/common": "10.2.5",
+    "@angular/compiler": "10.2.5",
+    "@angular/core": "10.2.5",
+    "@angular/flex-layout": "10.0.0-beta.32",
+    "@angular/forms": "10.2.5",
+    "@angular/material": "10.2.7",
+    "@angular/material-moment-adapter": "10.2.7",
+    "@angular/platform-browser": "10.2.5",
+    "@angular/platform-browser-dynamic": "10.2.5",
+    "@angular/router": "10.2.5",
+    "@candidosales/material-time-picker": "2.4.0",
+    "angular-in-memory-web-api": "0.11.0",
+    "lodash": "^4.17.21",
+    "moment": "2.29.1",
+    "ngx-mat-timepicker": "12.0.0",
+    "rxjs": "6.6.7",
+    "tslib": "1.14.1",
+    "zone.js": "0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.1000.0",
